# ai-agents-project

./: .env.example  .gitignore  Makefile  README.md  debug_output.txt  docs_agent3_data_analysis.md  guia.md  guia_agent3_data_analysis.md  pyproject.toml  requirements.txt  setup.py
ai_agents/: __init__.py
ai_agents/agents/: __init__.py
ai_agents/agents/chat/: __init__.py  langchain_agent.py  llm_agent.py
ai_agents/agents/data_analysis/: __init__.py  data_models.py  pandas_agent.py
ai_agents/agents/data_analysis/processors/: __init__.py  csv_processor.py  stats_processor.py  stats_processor_basic.py  visualization_processor.py
ai_agents/agents/data_analysis/tools/: __init__.py  analysis_tools.py
ai_agents/agents/data_analysis/workflows/: __init__.py  analysis_workflow.py
ai_agents/agents/orchestration/: __init__.py  advanced_orchestrator.py  agent_orchestrator.py
ai_agents/agents/qa/: __init__.py  memory_qa_agent.py
ai_agents/agents/workflows/: __init__.py  sophisticated_agent.py
ai_agents/api/: __init__.py  main.py  models.py  routes.py
ai_agents/cli/: __init__.py  commands.py  main.py
ai_agents/config/: __init__.py  logging_config.py  settings.py
ai_agents/core/: __init__.py  base_agent.py  exceptions.py  types.py
ai_agents/utils/: __init__.py  conversation_logger.py  decorators.py  formatters.py  helpers.py  validators.py
demo_data/: documentos_demo.txt  ventas_demo.csv
docs/: README.md  README_updates_summary.md
docs/agents/: data_analysis_agent.md  langchain_agent_consolidation.md
docs/guides/: agent2_qa_guide.md  test_memory_cleanup_guide.md
docs/reports/: README.md  agent_orchestrator_elimination_report.md  cleanup_report.md  final_consolidation_report.md  validation_report.md
docs/steps/: step_2_12_advanced_orchestrator.md  step_2_13_cli_api_interfaces.md
examples/: advanced_orchestrator_demo.py  conversation_logging_demo.py  orchestrator_demo.py  step_2_13_demo.py
legacy/: README.md
legacy/src/: demo_agent3.py  main.py
legacy/src/agents/: agent1_context_awareness.py  agent2_qa.py  agent4_langGraph.py
legacy/src/tests/: test_agent2.py  test_agent3.py  test_agent4.py  test_setup.py
scripts/: run_logging_demo.py  start_api.py  start_cli.py
src/: main.py
src/agents/: agent2_qa.py  agent3_data_analysis.py  base_agent.py  langchain_chat_agent.py  llm_chat_agent.py
src/tests/: test_agent0.py  test_agent1.py  test_agents.py
src/utils/: helpers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_advanced_orchestrator.py  test_advanced_orchestrator_basic.py  test_agent_orchestrator.py  test_langchain_chat_agent.py  test_migrated_agents.py  test_pandas_agent.py  test_sophisticated_agent.py  test_structure.py
